# violin-app

./: README.md  package-lock.json
backend/: environment.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: accomp.py  audio.py  score.py
backend/app/services/: audio_stream.py  musicxml.py  pitch.py  score_follow.py
backend/backend/data/scores/: Cannon_in_D-Violin_and_Bass_Duet_3e9b2fceaa8644eb82979ba5e86f0970.mxl  Hes_A_Pirate_Pirate_of_Caribbean_1a44cee010a24630ac12ecb17ee8f7cd.mid  Hes_A_Pirate_Pirate_of_Caribbean_9c22af27a87d4d3ba002be8399eb7323.mxl  Pirates_of_the_Caribbean_a1dfd6adb1074af1b40157b820adfb6f.mxl  Silent_Night_Holy_Night_8ec7ab6527a54e17b98965ffad43449b.mxl
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts  websocket.ts
frontend/src/components/: AccompanimentControls.tsx  AudioSourceSelector.tsx  Metronome.tsx  MicMonitor.tsx  NoiseControls.tsx  PracticeTab.tsx  ScoreTab.tsx  ScoreView.tsx  Tuner.tsx
frontend/src/styles/: main.css
