[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "librosa>=0.11.0",
    "mido==1.3.2",
    "music21==9.1.0",
    "numpy==2.0.2",
    "pretty-midi==0.2.10",
    "pyaudio>=0.2.14",
    "python-multipart==0.0.9",
    "sounddevice==0.4.7",
    "soundfile==0.12.1",
    "uvicorn[standard]==0.30.6",
]
